@@ -11,6 +11,19 @@ Lo ideal sería tener una versión con threads, pero que se escuche bien...
 -truncar en mas sitios los t-estados
 truncar en mas sitios a CONVERT_PZX_TSTATES_AUDIO_SAMPLE
 
+-Ping pong sonido en Inves?
+
+-Impresión caracteres en consola texto nunca debe mostrar el 127. Es Delete
+
+-Opción para resetear config a defecto
+
+-Incluir demo de Alexander 
+
+-Opción para que ocr no busque en caracteres que diga 23606/7. Que lo haga solo en la de la rom y listo
+Esto evitaria en teoría que por ejemplo en great escape salen caracteres paréntesis a veces en el escenario 
+
+-Opción para formato de grabación de autosave snap
+
 
 -decir que ssl mac requiere "brew install openssl"
 Habra otra libssl de sistema?
